--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*   @muhamadazmy @Omarabdul3ziz @ashraffouda @rawdaGastan @xmonader @Eslam-Nawara
+*   @Omarabdul3ziz @ashraffouda @rawdaGastan @xmonader @Eslam-Nawara
